# playwright-python-template

./: .env  .gitignore  config.json  conftest.py  pyproject.toml  requirements.txt
data/: .gitkeep
framework/: __init__.py  exceptions.py
framework/api/: __init__.py
framework/configuration/: config.py  loader.py
framework/contexts/: __init__.py  ui_context.py
framework/fixtures/: api_fixtures.py  shared.py  ui_fixtures.py
framework/helpers/: assertions.py  file_utils.py  string_utils.py  wait_utils.py
framework/reporting/: allure_utils.py  html_report.py
framework/ui/: __init__.py  base_component.py  base_form.py  base_page.py  page_factory.py
framework/ui/components/: __init__.py
pages/: __init__.py
tests/: conftest.py
tests/ui/: conftest.py
